# ner_prediction_v1

./: .gitignore  README.md  pyproject.deploy.toml  pyproject.toml
back_end/: config_settings.py  main.py
back_end/routes/: ner_routes.py  ui_routes.py
docs/: training.md
front_end/static/: script.js  style.css
front_end/templates/: index.html
notebooks/: Untitled.ipynb  bert v2.ipynb  bert v3.ipynb  biLSTM+softmax.ipynb  classifier_weights.pth  create dataset on huggingface.ipynb  functions.py
scripts/: calculate_evaluation_metrics.py  process_raw_data.py  push_data_to_hf_hub.py
src/: config.py  data_utils.py  evaluation.py  functions.py  inference.py  inference_pipeline.py  main.py  model_utils.py  train.py
